# COS214Assignment

./: .clang-format  .gitignore  CMakeLists.txt  COS214_UpdatedProject_UML_Final.vpp  COS214_UpdatedProject_UML_v100.vpp  COS214_UpdatedProject_UML_v101.vpp  COS214_UpdatedProject_UML_v102.vpp  COS214_UpdatedProject_UML_v103.vpp  COS214_UpdatedProject_UML_v4.vpp  COS214_UpdatedProject_UML_v4.vpp.bak_000f  Group CleanCode Project Report.docx  README.md  makefile
.github/workflows/: CompileAndTest.yml  c-cpp.yml  superLinter.yml
src/: AboutToLeave.cpp  AboutToLeave.h  BaseChef.cpp  BaseChef.h  BunChef.cpp  BunChef.h  Burger.h  BurgerBunOrder.cpp  BurgerBunOrder.h  BurgerOrder.cpp  BurgerOrder.h  BurgerToppingOrder.cpp  BurgerToppingOrder.h  Caretaker.cpp  Caretaker.h  ChainDecTestMain.cpp  CheeseChef.cpp  CheeseChef.h  CheeseOrder.cpp  CheeseOrder.h  Chef.h  Colleague.h  Command.h  Complaint.cpp  Complaint.h  CompositeTable.cpp  CompositeTable.h  ConcreteMediator.cpp  ConcreteMediator.h  CreateComplaint.cpp  CreateComplaint.h  CreateOrder.cpp  CreateOrder.h  Customer.cpp  Customer.h  DecoratorMain.cpp  DecoratorMain.cpp.bak  Default.cpp  Default.h  EdibleBurger.cpp  (+54 more)
src/Main/: Main.cpp
src/html/: AboutToLeave_8h_source.html  BaseChef_8h_source.html  BunChef_8h_source.html  BurgerBunOrder_8h_source.html  BurgerOrder_8h_source.html  BurgerToppingOrder_8h_source.html  Caretaker_8h_source.html  CheeseChef_8h_source.html  CheeseOrder_8h_source.html  Chef_8h_source.html  Colleague_8h_source.html  Command_8h_source.html  Complaint_8h_source.html  CompositeTable_8h_source.html  (+310 more)
(+158 files in other folders)
